--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -124,7 +124,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2018-02-05}
+  \date{2018-02-08}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -766,9 +766,9 @@ is the residual sum of squares \emph{RSS}: we calculate \(\beta_0\) and
 order derivatives with respect to \(\beta_0\) and \(\beta_1\) and set
 them to zero.
 
-3- Click Click \textcolor{white}{[}\faVideoCamera\textcolor{white}{]}
-here and watch the video to understand more about the residuals and
-least squares.
+3- Click \textcolor{white}{[}\faVideoCamera\textcolor{white}{]} here and
+watch the video to understand more about the residuals and least
+squares.
 
 4- Click here to see the influence of the distance employed in the sum
 of squares. Try to minimize the sum of squares for the different
@@ -4061,7 +4061,7 @@ Note that \(\delta_k(x)\) is a \emph{linear} function of \(x\).
   Example: If \(K=2\) and \(\pi_1=\pi_2\), then the \textbf{desicion
   boundary} is at \(x=\frac{\mu_1+\mu2}{2}\) (\textbf{Prove it!}).
 \item
-  An example where \(\mu_1=-1.5\), \(\mu_2=1.5\), \(\mu_1=\mu_2=0.5\)
+  An example where \(\mu_1=-1.5\), \(\mu_2=1.5\), \(\pi_1=\pi_2=0.5\)
   and \(\sigma^2=1\) is shown in this following figure
 \end{itemize}
 
@@ -4069,9 +4069,9 @@ Note that \(\delta_k(x)\) is a \emph{linear} function of \(x\).
 
 \begin{itemize}
 \item
-  See this
-  \href{https://www.coursera.org/learn/machine-learning/lecture/WuL1H/decision-boundary}{video}
-  to understand more about \emph{decision boundary}.
+  See this \textcolor{white}{[}\faVideoCamera\textcolor{white}{]} video
+  to understand more about \emph{decision boundary} (Applied on logistic
+  regression).
 \item
   As we classify a new point according to which density is highest, when
   the priors are diﬀerent we take them into account as well, and compare
