--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2018-09-14}
+    \date{2018-09-25}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -2281,7 +2281,7 @@ Factor (Explained) & \(p\) & ESS=SSR & MSR=ESS/\((p)\) & F=MSR/MSE &
 p-value\tabularnewline
 Error (Unexplained) & \(n-p-1\) & RSS=SSE & MSE=RSS/\((n-p-1)\) &
 &\tabularnewline
-Total & \(n-1\) & SST=TSS & & &\tabularnewline
+Total & \(n-1\) & TSS=SST & & &\tabularnewline
 \bottomrule
 \end{longtable}
 
